[package]
name = "graylog-api-client"
version = "0.1.0"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdumay/graylog-api-client-rs"
homepage =  "https://github.com/cdumay/graylog-api-client-rs"
description = """
An HTTP REST client example for graylog
"""

[dependencies]
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"